r.import: add r.in.gdal's -l flag
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66483 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/r.import/r.import.html
+++ b/scripts/r.import/r.import.html
@@ -38,6 +38,9 @@ Both <b>bicubic</b> and <b>lanczos</b> preserve linear features. With
 <b>nearest</b> or <b>bilinear</b>, linear features can become zigzag 
 features after reprojection.
 
+<p>
+For explanation of <b>-l</b> flag, please refer to <a href="r.in.gdal.html">r.in.gdal</a> manual.
+
 <h2>KNOWN ISSUES</h2>
 Option <b>extent</b>=<em>region</em> works only when dataset has different
 projection than current location (<a href="r.proj.html">r.proj</a> is then used).
