--- a/scripts/g.extension/g.extension.html
+++ b/scripts/g.extension/g.extension.html
@@ -127,6 +127,20 @@ For convenience, a shorter syntax can be used:
 g.extension r.stream.distance
 </pre></div>
 
+<h3>Download and install of an extension when behind a proxy</h3>
+
+Example for an open http proxy:
+<div class="code"><pre>
+# syntax: http://proxyurl:proxyport
+g.extension extension=r.stream.distance proxy="http://proxy.example.com:8080"
+</pre></div>
+
+<p>
+Example for a proxy with proxy authentication:
+<div class="code"><pre>
+# syntax: http://username:password@proxyurl:proxyport
+g.extension extension=r.stream.distance proxy="http://username:password@proxy.example.com:8080"
+</pre></div>
 
 <h3>Managing the extensions</h3>
 
