manual: fix broken links; HTML cosmetics
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66522 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/v.db.join/v.db.join.html
+++ b/scripts/v.db.join/v.db.join.html
@@ -50,7 +50,7 @@ cat|onemap_pro|PERIMETER|GEOL250_|GEOL250_ID|GEO_NAME|SHAPE_area|SHAPE_len|geol_
 <h3>Soil map table join</h3>
 
 Joining the soil type explanations from table <em>soils_legend</em>
-into the Spearfish soils map (<a href="http://www.grassbook.org/examples_menu.php">download legend)</a>:
+into the Spearfish soils map (<a href="http://www.grassbook.org/code-examples/code-examples-1st-edition/">download legend</a>):
 
 <div class="code"><pre>
 g.copy vect=soils,mysoils
