r.mapcalc documentation: output type of rand depends on input type
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66527 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.mapcalc/r3.mapcalc.html
+++ b/raster/r.mapcalc/r3.mapcalc.html
@@ -224,7 +224,7 @@ nmin(x,y[,z...])        smallest value of those listed, excluding NULLs *
 nmode(x,y[,z...])       mode value of those listed, excluding NULLs     *
 not(x)                  1 if x is zero, 0 otherwise
 pow(x,y)                x to the power y                                *
-rand(a,b)               random value x : a &lt;= x &lt; b
+rand(a,b)               random value x : a &lt;= x &lt; b                     *
 round(x)                round x to nearest integer                      I
 round(x,y)              round x to nearest multiple of y
 round(x,y,z)            round x to nearest y*i+z for some integer i
