--- a/temporal/t.register/t.register.html
+++ b/temporal/t.register/t.register.html
@@ -25,21 +25,16 @@ increment are mutual exclusive. The user can register single maps or a
 list of maps at once. Maps can be registered in several space time
 datasets using the same timestamp.
 <p>
-    The <i>increment</i> option and the <i>-i</i> flag (to create time intervals)
-    work only in conjunction with the <i>start</i> option.
-    If an input file with time stamps is used, then the <i>increment</i> option
-    and the <i>-i</i> flag are not supported.
-</p>
+The <em>increment</em> option and the <b>-i</b> flag (to create time intervals)
+work only in conjunction with the <b>start</b> option.
+If an input file with time stamps is used, then the <em>increment</em> option
+and the <b>-i</b> flag are not supported.
 <p>
 Start time and end time with absolute time must be provided using the
 format <b>yyyy-mm-dd HH:MM:SS +HHMM</b>. It is supported to specify
 only the date <b>yyyy-mm-dd</b>. In case of relative time the temporal
 unit (years, months, days, hours, minutes or seconds) must be provided.
 The relative start time, end time and the increment are integers.
-<p>
-
-
-</p>
 
 <h2>NOTES</h2>
 
@@ -56,7 +51,8 @@ database.
 The input file consists of a list of map names, optionally along with time stamps.
 Each map name is to be stored in a row in this file.
 <p>
-There are several options to register maps, <i>increment</i> option and the <i>-i</i> flag are supported:
+There are several options to register maps, <em>increment</em> option and
+the <b>-i</b> flag are supported:
 <p>
 Specification of map names:
 <div class="code"><pre>
@@ -68,8 +64,8 @@ terra_lst_day20020117
 </pre></div>
 
 <p>
-Specification of map names and the absolute start time (date) of the time instances,
-not support for <i>increment</i> option and the <i>-i</i> flag:
+Specification of map names and the absolute start time (date) of the time
+instances, not support for <em>increment</em> option and the <b>-i</b> flag:
 <div class="code"><pre>
 terra_lst_day20020113|2002-01-13
 terra_lst_day20020114|2002-01-14
@@ -80,7 +76,7 @@ terra_lst_day20020117|2002-01-17
 
 <p>
 Specification of map names and the absolute time stamp (datetime),
-not support for <i>increment</i> option and the <i>-i</i> flag:
+not support for <em>increment</em> option and the <b>-i</b> flag:
 <div class="code"><pre>
 terra_lst_day20020113|2002-01-13 10:30
 terra_lst_day20020114|2002-01-14 10:30
@@ -91,7 +87,7 @@ terra_lst_day20020117|2002-01-17 10:30
 
 <p>
 Specification of the map name and the absolute time interval with start,
-not support for <i>increment</i> option and the <i>-i</i> flag:
+not support for <em>increment</em> option and the <b>-i</b> flag:
 and end time:
 <div class="code"><pre>
 prec_1|2001-01-01|2001-04-01
