--- a/raster/r.mapcalc/r.mapcalc.html
+++ b/raster/r.mapcalc/r.mapcalc.html
@@ -11,13 +11,13 @@ and functions.
 <p><b>result =</b><em> expression</em>
 <p>where <em>result</em> is the name of a raster map layer
 to contain the result of the calculation and
-<em>expression</em> is any legal arithmetic expression involving existing
+<b>expression</b> is any legal arithmetic expression involving existing
 raster map layers, integer or floating point constants,
 and functions known to the calculator.
 Parentheses are allowed in the expression and may be nested to any depth.
 <em>result</em> will be created in the user's current mapset.
 <p>
-As <em>expression=</em> is the first option, it is the default. This
+As <b>expression=</b> is the first option, it is the default. This
 means that passing an expression on the command line is possible
 as long as the expression is quoted and a space is included before the
 first <em>=</em> sign.
@@ -279,13 +279,11 @@ red
 
 The functions currently supported are listed in the table below.
 The type of the result is indicated in the last column.
-<em>F</em>
-means that the functions always results in a floating point value,
-<em>I</em>
-means that the function gives an integer result, and
-<em>*</em>
-indicates that the result is float if any of the arguments to the function
-are floating point values and integer if all arguments are integer.
+<em>F</em> means that the functions always results in a floating point value,
+<em>I</em> means that the function gives an integer result, and
+<em>*</em> indicates that the result is float if any of the arguments to the
+function are floating point values and integer if all arguments are integer.
+
 <p><div class="code"><pre>
 function                description                                     type
 ---------------------------------------------------------------------------
@@ -322,7 +320,7 @@ nmin(x,y[,z...])        smallest value of those listed, excluding NULLs *
 nmode(x,y[,z...])       mode value of those listed, excluding NULLs     *
 not(x)                  1 if x is zero, 0 otherwise
 pow(x,y)                x to the power y                                *
-rand(a,b)               random value x : a &lt;= x &lt; b
+rand(a,b)               random value x : a &lt;= x &lt; b                     *
 round(x)                round x to nearest integer                      I
 round(x,y)              round x to nearest multiple of y
 round(x,y,z)            round x to nearest y*i+z for some integer i
@@ -331,6 +329,7 @@ sqrt(x)                 square root of x                                F
 tan(x)                  tangent of x (x is in degrees)                  F
 xor(x,y)                exclusive-or (XOR) of x and y                   I
 </pre></div>
+
 <div class="code"><pre>
 Internal variables:
  row()                  current row of moving window
@@ -610,19 +609,19 @@ If a user want to use the existing map, the name of the temporary variable
 
 <h3>Random number generator initialization</h3>
 <p>The pseudo-random number generator used by the rand() function can
-be initialised to a specific value using the <em>seed</em> option. 
+be initialised to a specific value using the <b>seed</b> option. 
 This can be used to replicate a previous calculation.
 <p>Alternatively, it can be initialised from the system time and the
-PID using the <em>-r</em> flag. This should result in a different seed
+PID using the <b>-r</b> flag. This should result in a different seed
 being used each time.
 <p>In either case, the seed will be written to the map's history, and
 can be seen using <em>r.info</em>.
 <p>If you want other people to be able to verify your results, it's
-preferable to use the <em>seed</em> option to supply a seed which is
+preferable to use the <b>seed</b> option to supply a seed which is
 either specified in the script or generated from a determenistic process
 such as a pseudo-random number generator given an explicit seed.
 <p>Note that the rand() function will generate a fatal error if neither
-the <em>seed</em> option nor the <em>-s</em> flag are given.
+the <b>seed</b> option nor the <b>-s</b> flag are given.
 
 <h2>EXAMPLES</h2>
 To compute the average of two raster map layers
@@ -682,8 +681,7 @@ X (map) values supplied and y (newmap) values returned:
 <h2>KNOWN ISSUES</h2>
 
 Continuation lines must end with a <tt>\</tt> and have <em>no</em> trailing
-white space (blanks or tabs).
-If the user does leave white space at the end of
+white space (blanks or tabs). If the user does leave white space at the end of
 continuation lines, the error messages produced by <em>r.mapcalc</em> will
 be meaningless and the equation will not work as the user intended.
 This is particularly important for the <tt>eval()</tt> function.
@@ -701,7 +699,7 @@ NULL cells. It is left to the user to utilize the <tt>isnull()</tt> function.
 
 <h2>SEE ALSO</h2>
 
-<p><em>
+<em>
 <a href="g.region.html">g.region</a>,
 <a href="r.bitpattern.html">r.bitpattern</a>,
 <a href="r.blend.html">r.blend</a>,
@@ -730,4 +728,5 @@ Michael Shapiro, U.S.Army Construction Engineering
 Research Laboratory
 <p>Glynn Clements
 
-<p><i>Last changed: $Date$</i>
+<p>
+<i>Last changed: $Date$</i>
