r.mapcalc documentation update: "Using the same map for input and output results in undefined behaviour" https://lists.osgeo.org/pipermail/grass-dev/2011-July/054983.html
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66548 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/raster/r.mapcalc/r.mapcalc.html
+++ b/raster/r.mapcalc/r.mapcalc.html
@@ -12,7 +12,7 @@ and functions.
 <p>where <em>result</em> is the name of a raster map layer
 to contain the result of the calculation and
 <b>expression</b> is any legal arithmetic expression involving existing
-raster map layers, integer or floating point constants,
+raster map layers (except <em>result</em> itself), integer or floating point constants,
 and functions known to the calculator.
 Parentheses are allowed in the expression and may be nested to any depth.
 <em>result</em> will be created in the user's current mapset.
