--- a/raster/r.mapcalc/r3.mapcalc.html
+++ b/raster/r.mapcalc/r3.mapcalc.html
@@ -12,7 +12,7 @@ and functions.
 <p>where <em>result</em> is the name of a raster map layer
 to contain the result of the calculation and
 <b>expression</b> is any legal arithmetic expression involving existing
-raster map layers, integer or floating point constants,
+raster map layers (except <em>result</em> itself), integer or floating point constants,
 and functions known to the calculator.
 Parentheses are allowed in the expression and may be nested to any depth.
 <em>result</em> will be created in the user's current mapset.
