Various typo fixes (https://trac.osgeo.org/grass/ticket/2776)
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66567 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/lib/init/grass7.html
+++ b/lib/init/grass7.html
@@ -223,7 +223,7 @@ script. The script file must have its executable bit set.
 <dt><b>grass71 -text</b>
 <dd> Start GRASS using the text-based user interface. Appropriate
 location and mapset must be set by environmental variables (see
-examples bellow) otherwise taken from the last GRASS session.</dd>
+examples below) otherwise taken from the last GRASS session.</dd>
 
 <dt><b>grass71 -gtext</b>
 <dd> Start GRASS using the text-based user interface. The user will be
