--- a/temporal/t.rast.aggregate/t.rast.aggregate.html
+++ b/temporal/t.rast.aggregate/t.rast.aggregate.html
@@ -53,7 +53,7 @@ available for aggregation computation. Internally several
 specified parallel processes (<em>nprocs</em>) and the number of
 intervals to aggregate.
 <p>
-The flag <b>-s</b> allows to store a date as map name suffix rather than
+The flag <b>-s</b> allows storing a date as map name suffix rather than
 using consecutive numbering. See the examples below for details.
 
 <h2>EXAMPLES</h2>
