--- a/vector/v.select/v.select.html
+++ b/vector/v.select/v.select.html
@@ -236,7 +236,7 @@ v.select with CONTAINS operator: selected polygons shown in grey (red: input poi
 This operator additionally requires the <b>relate</b> parameter (in other
 GIS called 'ST_Relate').
 
-This operator allows to calculate the
+This operator allows calculating the
 <a href="https://en.wikipedia.org/wiki/DE-9IM">Dimensionally Extended nine-Intersection Model (DE-9IM)</a>.
 
 In the following one example: Select polygon with 'TOUCHES' operator
