partially revert https://trac.osgeo.org/grass/changeset/66567
git-svn-id: https://svn.osgeo.org/grass/grass/trunk@66569 15284696-431f-4ddb-bdfa-cd5b030d7da7

--- a/scripts/v.krige/v.krige.html
+++ b/scripts/v.krige/v.krige.html
@@ -169,7 +169,7 @@ maintained by Edzer J. Pebesma and others
 <br>
 
 R
-package <a href="http://cran.r-project.org/web/packages/spgrass6/index.html">spgrass6</a>,
+package <a href="http://cran.r-project.org/web/packages/rgrass7/index.html">rgrass7</a>,
 maintained by Roger Bivand
 <br>
 
